--- a/src/pages/researchers/[id].astro
+++ b/src/pages/researchers/[id].astro
@@ -37,6 +37,8 @@ const enrichedInitiatives = researcher.initiatives.map((init) => {
     return {
         ...init,
         start_date: fullInit?.start_date,
+        end_date: fullInit?.end_date,
+        initiative_type: fullInit?.initiative_type,
     };
 });
 
